--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
-    background-color:black;
+    background-color:#00c87c;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -23,12 +23,12 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    color:White;
+    color:#0d254f;
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: red;
+    color: #0c090a;
 }
 footer {
     border-top: 1px solid #d5d5d5;
